// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Slide passes the snapshot test when direction is set 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "translateX": 0,
      }
    }
    animatedStyle={
      {
        "value": {
          "transform": [
            {
              "translateX": 500,
            },
          ],
        },
      }
    }
    collapsable={false}
    exit={
      {
        "translateX": 500,
      }
    }
    exitTransition={
      {
        "dampingRatio": 1,
        "duration": 200,
        "type": "spring",
      }
    }
    from={
      {
        "translateX": 500,
      }
    }
    style={
      {
        "transform": [
          {
            "translateX": 500,
          },
        ],
      }
    }
    transition={
      {
        "dampingRatio": 1,
        "duration": 200,
        "type": "spring",
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      animate={
        {
          "color": "#1A2138",
        }
      }
      animatedStyle={
        {
          "value": {
            "color": "#1A2138",
          },
        }
      }
      collapsable={false}
      style={
        {
          "color": "#1A2138",
          "fontFamily": "Poppins-Regular",
          "fontSize": 16.099999999999998,
          "fontStyle": "normal",
          "fontWeight": "400",
          "includeFontPadding": false,
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      This is a test
    </Text>
  </View>
</View>
`;

exports[`Atoms/Slide passes the snapshot test when show is false 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
/>
`;

exports[`Atoms/Slide passes the snapshot test when show is true 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "translateX": 0,
      }
    }
    animatedStyle={
      {
        "value": {
          "transform": [
            {
              "translateX": -500,
            },
          ],
        },
      }
    }
    collapsable={false}
    exit={
      {
        "translateX": -500,
      }
    }
    exitTransition={
      {
        "dampingRatio": 1,
        "duration": 200,
        "type": "spring",
      }
    }
    from={
      {
        "translateX": -500,
      }
    }
    style={
      {
        "transform": [
          {
            "translateX": -500,
          },
        ],
      }
    }
    transition={
      {
        "dampingRatio": 1,
        "duration": 200,
        "type": "spring",
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      animate={
        {
          "color": "#1A2138",
        }
      }
      animatedStyle={
        {
          "value": {
            "color": "#1A2138",
          },
        }
      }
      collapsable={false}
      style={
        {
          "color": "#1A2138",
          "fontFamily": "Poppins-Regular",
          "fontSize": 16.099999999999998,
          "fontStyle": "normal",
          "fontWeight": "400",
          "includeFontPadding": false,
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      This is a test
    </Text>
  </View>
</View>
`;
